Use local copy of js library
USe lcal copy of p5.js and chroma.js js library.
Remove chroma.js dependency in package.json

--- a/Hyphea/index.html
+++ b/Hyphea/index.html
@@ -1,9 +1,8 @@
 <html>
 
 <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
-
-    <script src="node_modules/chroma-js/chroma.js"></script>
+    <script src="js/p5/p5.js"></script>
+    <script src="js/chroma/chroma.js"></script>
     <script src="build/build.js"></script>
 
     <link rel="shortcut icon" href="https://p5js.org/assets/img/favicon.ico">
