--- a/Hyphea/index.html
+++ b/Hyphea/index.html
@@ -9,13 +9,15 @@
     <link rel="icon" href="https://p5js.org/assets/img/favicon.ico">
 
     <style>
-        * {
+        body,html,canvas {
             padding: 0px;
             margin: 0px;
         }
+        body {
+            overflow: hidden;
+        }
     </style>
-    <script>
-    </script>
+
 </head>
 
 <body>
