--- a/SandSpline/index.html
+++ b/SandSpline/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src="js/b-spline.js"></script>
     <script src="js/p5/p5.js"></script>
     <script src="build/build.js"></script>
 
